--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,24 +1,12 @@
+FROM node:latest
+WORKDIR /app
 
-# Use a Node.js base image
-FROM node:14
+COPY package.json .
 
-# Set the working directory in the container
-WORKDIR /usr/src/app
-
-# Copy package.json and package-lock.json
-COPY package*.json ./
-
-# Install dependencies
 RUN npm install
 
-# Copy the rest of the application code
 COPY . .
 
-# Copy .env file
-COPY .env ./
-
-# Expose the port the app runs on
 EXPOSE 5000
 
-# Command to run the application
-CMD ["node", "server.js"]
+CMD ["node","index"]
