--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,13 @@
+FROM node:latest
 
-# Frontend Dockerfile (`frontend/Dockerfile`)
-FROM node:14
+WORKDIR /app
 
-WORKDIR /usr/src/app
-
-COPY package*.json ./
+COPY package.json .
 
 RUN npm install
 
 COPY . .
 
-RUN npm run build
-
-RUN npm install -g serve
-
 EXPOSE 3000
 
-CMD ["serve", "-s", "build"]
+CMD ["npm","start"]
