--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,20 @@
-
-version: '3'
+version: '1.0'
 services:
   mongodb:
-    image: mongo
-    container_name: mongodb
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo-data:/data/db
-
-  backend:
-    build: ./backend
-    container_name: backend
+    image: "mongo"
+  server:
+    container_name: mern-server
+    build: ./server
     ports:
       - "5000:5000"
     depends_on:
       - mongodb
-    environment:
-      - PORT=5000
-      - MONGO_URI=mongodb+srv://sasandamanahara:sasanda1234@cluster0.mtt7afa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
-      - JWT_TOKEN_KEY=asddfassadfsadfadasdffewcddzgse
-    volumes:
-      - ./backend:/usr/src/app
-      - /usr/src/app/node_modules
-
-  frontend:
-    build: ./frontend
-    container_name: frontend
+  client:
+    container_name: mern-client
+    build: ./client
     ports:
       - "3000:3000"
     depends_on:
-      - backend
-    volumes:
-      - ./frontend:/usr/src/app
-      - /usr/src/app/node_modules
+      - server
 
-volumes:
-  mongo-data:
