--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: "mongo"
   server:
     container_name: mern-server
-    build: ./server
+    build: ./backend
     ports:
       - "5000:5000"
     depends_on:
@@ -12,7 +12,7 @@ services:
 
   client:
     container_name: mern-client
-    build: ./client
+    build: ./frontend
     ports:
       - "3000:3000"
     depends_on:
