--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
-
-version: '3'
+version: "3"
 services:
   mongodb:
     image: mongo
@@ -13,11 +12,11 @@ services:
     build: ./backend
     container_name: backend
     ports:
-      - "5000:5000"
+      - "3000:3000"
     depends_on:
       - mongodb
     environment:
-      - PORT=5000
+      - PORT=3000
       - MONGO_URI=mongodb+srv://sasandamanahara:sasanda1234@cluster0.mtt7afa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
       - JWT_TOKEN_KEY=asddfassadfsadfadasdffewcddzgse
@@ -29,7 +28,7 @@ services:
     build: ./frontend
     container_name: frontend
     ports:
-      - "3000:3000"
+      - "5000:3000"
     depends_on:
       - backend
     volumes:
