--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,22 +3,22 @@ services:
   mongodb:
     image: "mongo"
     env_file:
-      - .env
+      - ./backend/.env
 
   server:
     container_name: mern-server
     build: ./backend
     ports:
-      - "3000:3000"
+      - "3001:3001"
     depends_on:
       - mongodb
     env_file:
-      - .env
+      - ./backend/.env
 
   client:
     container_name: mern-client
     build: ./frontend
     ports:
-      - "5000:3000"
+      - "3000:3000"
     depends_on:
       - server
